@@ -1,4 +1,5 @@
 data:extend({
+    --Fuel categories
     {
         type = "fuel-category",
         name = "omni-electro"
@@ -8,81 +9,89 @@ data:extend({
         name = "omnite"
     },
     {
-      type = "fuel-category",
-      name = "omni-0"
-  },
-	{
-    type = "item-group",
-    name = "omnienergy",
-    order = "z",
-    inventory_order = "z",
-    icon = "__omnimatter_energy__/graphics/technology/omnimatter-energy.png",
-	icon_size = 128,
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-intermediates",
-	  group = "omnienergy",
-	  order = "a",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-components",
-	group = "omnienergy",
-	order = "b",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-power",
-	group = "omnienergy",
-	order = "c",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-solar",
-	group = "omnienergy",
-	order = "d",
-  },
-  {
-    type = "item-subgroup",
-    name = "hydromnide",
-	group = "omnienergy",
-	order = "e",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnicell",
-	group = "omnienergy",
-	order = "f",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-fuel-1",
-	group = "omnienergy",
-	order = "g",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-fuel-2",
-	group = "omnienergy",
-	order = "h",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-fuel-3",
-	group = "omnienergy",
-	order = "i",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-fuel-4",
-	group = "omnienergy",
-	order = "j",
-  },
-  {
-    type = "item-subgroup",
-    name = "omnienergy-fuel-5",
-	group = "omnienergy",
-	order = "k",
-  },
+        type = "fuel-category",
+        name = "omni-0"
+    },
+    --Item groups
+    {
+        type = "item-group",
+        name = "omnienergy",
+        order = "z",
+        inventory_order = "z",
+        icon = "__omnimatter_energy__/graphics/technology/omnimatter-energy.png",
+        icon_size = 128,
+    },
+    --Item subgroups
+    {
+        type = "item-subgroup",
+        name = "burner-inserter",
+        group = "logistics",
+        order = "bz",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-intermediates",
+        group = "omnienergy",
+        order = "a",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-components",
+        group = "omnienergy",
+        order = "b",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-power",
+        group = "omnienergy",
+        order = "c",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-solar",
+        group = "omnienergy",
+        order = "d",
+    },
+    {
+        type = "item-subgroup",
+        name = "hydromnide",
+        group = "omnienergy",
+        order = "e",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnicell",
+        group = "omnienergy",
+        order = "f",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-fuel-1",
+        group = "omnienergy",
+        order = "g",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-fuel-2",
+        group = "omnienergy",
+        order = "h",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-fuel-3",
+        group = "omnienergy",
+        order = "i",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-fuel-4",
+        group = "omnienergy",
+        order = "j",
+    },
+    {
+        type = "item-subgroup",
+        name = "omnienergy-fuel-5",
+        group = "omnienergy",
+        order = "k",
+    },
 })
